--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,10 @@ body {
 }
 
 .blinn-fa-icon {
-    font-size: 80px;
+    font-size: 60px;
     color: #ffffff
 }
 .blinn-fa-container {
     background-color: var(--secondaryColor) !important; ;
+    padding: 50px;
 }
