--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,6 @@ body {
     color: #ffffff
 }
 .blinn-fa-container {
-    background-color: var(--secondaryColor) !important; ;
+    background-color: var(--secondaryColor) !important;
     padding: 50px;
 }
