--- a/css/global.css
+++ b/css/global.css
@@ -15,7 +15,7 @@
 --primaryColor: #000000
 /* var(--secondaryColor) !important; */
 --secondaryColor: #631782
-/* var(--primaryColor) !important; */
+/* var(--accentColor) !important; */
 --accentColor: #000000
 /* var(--fontFamily) !important; */
 --fontFamily: "Montserrat", serif;
