--- a/css/global.css
+++ b/css/global.css
@@ -13,7 +13,7 @@
 
 /* var(--primaryColor) !important; */
 --primaryColor: #000000
-/* var(--secondaryColor) !important; */
+/*var(--secondaryColor) !important */
 --secondaryColor: #631782
 /* var(--accentColor) !important; */
 --accentColor: #000000
