--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
 
 .blinn-fa-icon {
     font-size: 60px;
-    color: #ffffff
+    color: #631782
 }
 .blinn-fa-container {
     background-color: var(--secondaryColor) !important;
