--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,7 @@ p {
     background-color: var(--secondaryColor) !important;
     padding: 50px;
 }
+.paragraph-one {
+    position: relative;
+    float: right;
+}
