--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ p {
     background-color: var(--secondaryColor) !important;
     padding: 50px;
 }
-.paragraph-one {
+.paragraph-one-img {
     position: relative;
     float: right;
     max-width: 350px;
