--- a/components/footer.html
+++ b/components/footer.html
@@ -1,1 +1,41 @@
-<footer>some footer content</footer>
+<footer>
+  
+  <!-- Begin Footer Row-->
+  <div class="container-fluid text-center blinn-footer-container">
+    <div class="row">
+        <div class="col col-12 col-xs-12 col-sm-6 col-md-3 col-lg-3 col-xl-2 col-xxl-3">
+          <ul>
+            <li>Link one here</li>
+            <li>link two here</li>
+            <li>link three here</li>
+            <li>link four here</li>
+          </ul>
+        </div>
+        <div class="col col-12 col-xs-12 col-sm-6 col-md-3 col-lg-3 col-xl-2 col-xxl-3">
+          <ul>
+            <li>Link one here</li>
+            <li>link two here</li>
+            <li>link three here</li>
+            <li>link four here</li>
+          </ul>
+        </div>
+        <div class="col col-12 col-xs-12 col-sm-6 col-md-3 col-lg-3 col-xl-2 col-xxl-3">
+          <ul>
+            <li>Link one here</li>
+            <li>link two here</li>
+            <li>link three here</li>
+            <li>link four here</li>
+          </ul>
+        </div>
+        <div class="col col-12 col-xs-12 col-sm-6 col-md-3 col-lg-3 col-xl-2 col-xxl-3">
+          <ul>
+            <li>Link one here</li>
+            <li>link two here</li>
+            <li>link three here</li>
+            <li>link four here</li>
+          </ul>
+        </div>
+        
+        
+    </div>
+    <!-- End Footer Row--></footer>
