--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,10 @@ p {
     height: auto;
     padding-left: 15px;
 }
+
+
+#custom-clip-path {
+    width: 100%;
+    height: 280px;
+    background-color: dodgerblue;
+}
