--- a/css/styles.css
+++ b/css/styles.css
@@ -26,5 +26,5 @@ p {
 #custom-clip-path {
     width: 100%;
     height: 280px;
-    background-color: dodgerblue;
+    background-color: var(--secondaryColor) !important;
 }
