--- a/css/styles.css
+++ b/css/styles.css
@@ -27,4 +27,6 @@ p {
     width: 100%;
     height: 280px;
     background-color: var(--secondaryColor) !important;
+    clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+
 }
