--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@ p {
     font-size: 60px;
     color: #631782;
 }
+
+.blinn-fa-icon {
+color: white;
+}
 .blinn-fa-container {
     background-color: var(--secondaryColor) !important;
     padding: 50px;
@@ -27,6 +31,6 @@ p {
     width: 100%;
     height: 280px;
     background-color: var(--secondaryColor) !important;
-    clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0%, 81% 50%, 0 52%);
 
 }
