--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ p {
     color: #631782;
 }
 
-.blinn-fa-icon {
+.blinn-fa-container a {
 color: white;
 }
 .blinn-fa-container {
@@ -31,6 +31,5 @@ color: white;
     width: 100%;
     height: 280px;
     background-color: var(--secondaryColor) !important;
-    clip-path: polygon(0 0, 100% 0%, 81% 50%, 0 52%);
-
+    clip-path: polygon(0 0, 100% 0%, 100% 0, 0 34%);
 }
