--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,6 @@ color: white;
 #custom-clip-path {
     width: 100%;
     height: 280px;
-    background-color: var(--secondaryColor) !important;
+    background-color: blue !important;
     clip-path: polygon(0 0, 100% 0%, 100% 0, 0 34%);
 }
