--- a/css/schedule.css
+++ b/css/schedule.css
@@ -45,3 +45,8 @@ margin-bottom: 0;
 .contnet-table tbody tr {
     border-bottom: 1px solid #dddddd ; 
 }
+
+.content-table tbody tr {
+    background-color: #f3f3f3;
+    
+}
