--- a/css/form.css
+++ b/css/form.css
@@ -7,5 +7,34 @@
     margin: auto;
     background-color: #fffffd;
     padding: 30px;
-    
+
+}
+
+.web-form div {
+    margin-top: 10px;
+}
+
+#age {
+    width: 120px;
+
+}
+
+#custom {
+    margin-top: 5px;
+    display: none;
+}
+.radio, .checkbox {
+    width: 20px !important ;
+    height: 20px !important ;
+
+}
+
+.submit {
+    border-color: #631782;
+    background-color: #fffffd;
+    color: #631782;
+}
+.submit:hover {
+    background-color: #fffffd;
+    color: black;
 }
