--- a/css/form.css
+++ b/css/form.css
@@ -23,6 +23,18 @@
     margin-top: 5px;
     display: none;
 }
+
+#terms-and-conditions {
+    width: 40px !important;
+    height: 20px !important;
+
+}
+
+#about-me {
+    width: 100%;
+    height: 200px;
+}
+
 .radio, .checkbox {
     width: 20px !important ;
     height: 20px !important ;
