--- a/css/schedule.css
+++ b/css/schedule.css
@@ -12,7 +12,7 @@
     width: 100%;
     max-width: 1000px;
     margin: auto;
-    background-color: #fffffd;
+    background-color: #ddddee;
 padding: 25px;
 margin-bottom: 0;
 }
